Fix active navigation tab border above line on safari (#472)
- negative margin does not work on safari
TEST=manual

--- a/src/ui/sass/modules/_Nav.scss
+++ b/src/ui/sass/modules/_Nav.scss
@@ -8,8 +8,8 @@
   $nav-text-color: $color-text-primary !default;
   $nav-text-hover-color: #c5cace !default;
   $nav-text-active-color: $color-brand-primary !default;
-  $nav-text-activ-border-width: 2px;
-  $nav-text-active-border: $nav-text-activ-border-width solid $color-brand-primary !default;
+  $nav-text-active-border-width: 2px;
+  $nav-text-active-border: $nav-text-active-border-width solid $color-brand-primary !default;
   $nav-text-focus-background-color: #e9e9e9 !default;
 
   $nav-dropdown-font-size: 13px !default;
@@ -27,7 +27,7 @@
     display: flex;
     justify-content: flex-start;
     position: relative;
-    border-bottom: $nav-text-activ-border-width solid $nav-border-color;
+    border-bottom: $nav-text-active-border-width solid $nav-border-color;
   }
 
   &-expanded
@@ -42,6 +42,8 @@
 
   &-item
   {
+    $item-padding: 6px;
+
     @include Text(
       $size: $nav-text-font-size,
       $line-height: $nav-text-line-height,
@@ -49,8 +51,8 @@
       $color: $nav-text-color
     );
 
-    padding-top: 6px;
-    padding-bottom: 6px;
+    padding-top: $item-padding;
+    padding-bottom: $item-padding;
     padding-left: $base-spacing;
     padding-right: $base-spacing;
     text-transform: uppercase;
@@ -90,7 +92,7 @@
       color: $nav-text-active-color;
       border-bottom: $nav-text-active-border;
       font-weight: $font-weight-semibold;
-      margin-bottom: -$nav-text-activ-border-width;
+      padding-bottom: $item-padding + $nav-text-active-border-width;
     }
   }
 
